TestingCaotico/ErroresHTTP/virtual-service-recommendation-503.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - fault:
      abort:
          httpStatus: 503
          percent: 50
    route:
    - destination:
        host: recommendation
        subset: app-recommendation
---
